# cve2stix

./: .gitignore  README.md  credentials.yml.example  cve-settings.yml  download-settings.yml.schema  file.json  mkdocs.yml  nvd-credentials.yml.schema  settings.yml  setup.cfg
.github/workflows/: download-cves.yml
cve2stix/: __init__.py  cli.py  config.py  cve.py  database.py  enrichment.py  helper.py  main.py  parse_api_response.py  stix_store.py
cve2stix_web_project/: manage.py  requirements.txt
cve2stix_web_project/cve2stix_api/: apps.py  models.py  serializers.py  views.py
cve2stix_web_project/cve2stix_api/migrations/: 0001_initial.py  0002_alter_cve_created_alter_cve_modified.py  0003_remove_cve_owner.py
cve2stix_web_project/cve2stix_web_project/: asgi.py  settings.py  urls.py  wsgi.py
docs/: alerts.md  backends.md  cpe_sync.md  cve2stix-output.md  cve_sync.md  enrichments.md  github-actions.md  index.md  nvd-cpe-api.md  nvd-cpe-stix-objects.md  nvd-cve-api.md  nvd-cve-stix-objects.md  stix-objects.md
examples/: download-cves.py
stix_templates/identity/: indentity.yaml
stix_templates/indicator/: extension-definition.yaml
stix_templates/software/: extension-definition.yml
stix_templates/vulnerabilty/: extension-definition.yml
tests/cpe_matching/: match_list_sample_CVE-2019-18939.txt
tests/download-settings/: download-settings.yml
