[metadata]
name = cve2stix
version = 0.1

[options]
packages = 
    cve2stix

install_requires =
    stix2 @ git+https://github.com/signalscorps/cti-python-stix2.git@beta-1
    PyYAML==6.0
    requests==2.28.1
    GitPython==3.1.27
    python-dateutil==2.8.2

[options.entry_points]
console_scripts =
    cve2stix = cve2stix.cli:cli